Fix for stretched images in work

--- a/public/style/employment.scss
+++ b/public/style/employment.scss
@@ -11,7 +11,7 @@
         width: 50%;
         padding: 15px;
         img {
-            width: 100%;
+            display: block;
             height: 325px;
             padding: 10px;
         }
